<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jordanne.mybasicapp.MainActivity2"
    tools:showIn="@layout/activity_main"
    android:orientation="horizontal"
    android:background="#000000">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12sp"
        android:layout_marginTop="210sp"
        android:text="@string/_7"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_marginStart="14sp"
        android:layout_toEndOf="@+id/button7"
        android:text="@string/_8"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_marginStart="11sp"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/_9"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button7"
        android:layout_below="@+id/button7"
        android:layout_marginTop="14sp"
        android:text="@string/_4"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignEnd="@+id/button8"
        android:text="@string/_5"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignStart="@+id/button9"
        android:text="@string/_6"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="16sp"
        android:text="@string/_1"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button8"
        android:layout_alignTop="@+id/button1"
        android:text="@string/_2"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button6"
        android:layout_alignTop="@+id/button2"
        android:text="@string/_3"
        android:background="#495260"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="12sp"
        android:background="#495260"
        android:text="@string/_0"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignStart="@+id/button3"
        android:text="@string/point"
        android:background="#495260"
        android:textColor="#ffffff"/>

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonMinus"
            android:layout_alignTop="@+id/buttonDecimal"
            android:layout_alignBaseline="@+id/buttonDecimal"
            android:layout_alignBottom="@+id/buttonDecimal"
            android:background="#f2aa46"
            android:text="@string/equal"
            android:textColor="#ffffff" />

        <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMultiply"
        android:layout_alignStart="@+id/buttonMultiply"
        android:layout_marginBottom="19sp"
        android:text="@string/divide"
        android:background="#f2aa46"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_marginStart="19sp"
        android:layout_toEndOf="@+id/button9"
        android:text="@string/multiply"
        android:background="#f2aa46"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignStart="@+id/buttonMultiply"
        android:text="@string/minus"
        android:background="#f2aa46"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonDivide"
        android:layout_alignBottom="@+id/buttonDivide"
        android:layout_alignStart="@+id/button7"
        android:text="@string/ac"
        android:background="#d2d8e0"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPercent"
        android:layout_alignBottom="@+id/buttonPercent"
        android:layout_alignStart="@+id/button9"
        android:text="@string/negative"
        android:background="#d2d8e0"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAC"
        android:layout_alignBottom="@+id/buttonAC"
        android:layout_alignStart="@+id/button8"
        android:text="@string/percent"
        android:background="#d2d8e0"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonMinus"
        android:layout_alignTop="@+id/button3"
        android:text="@string/add"
        android:background="#f2aa46"
        android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textView_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonDivide"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/buttonAC"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="39dp"
            android:layout_marginStart="0dp"
            android:textColor="#7f858e"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_above="@+id/textView_action"
            android:layout_alignEnd="@+id/textView_action"
            android:layout_alignStart="@+id/buttonAC"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="10dp"

            android:text="@string/result"
            android:textColor="#7f858e"
            android:textSize="30sp" />
</RelativeLayout>
